syntax = "proto3";

package ticket;

service TicketService {
    rpc CreateTicket (CreateTicketRequest) returns (CreateTicketResponse);
}

message CreateTicketRequest {
    string title = 1;
    string description = 2;
}

message CreateTicketResponse {
    string id = 1;
}
